# wifisidechannels

./: .gitignore  1st_cnn_x_wiki_eve_1D copy.ipynb  1st_cnn_x_wiki_eve_1D.ipynb  LOG_EXPERIMENT.dump  README.md  experiment.ipynb  pyproject.toml  run_experiment.py  run_experiment_password.py  test_collect_live_sample.py  test_collect_sample.ipynb  test_collect_sample.py  test_create_experiment.ipynb  test_create_passwords.ipynb  test_dat.ipynb  test_dataloader.ipynb  test_dataset.ipynb  test_dataset_generator.ipynb  test_dataset_generator.py  test_evaluate_data.ipynb  test_evaluate_data_train.ipynb  test_passwords.txt  test_read_meta.ipynb  test_read_samples.ipynb  test_train_delta.ipynb
DUMP/: 0txbf.pcapng  1txbf.pcapng  2txbf.pcapng  txbf0.json
PASSWORDS/: 2_all_passwords.txt
bash/: setup_device.sh
experiment/: action.py  experiment.py
gradient_reversal/: README.md
hardware/motor/: fastdriver.py  fastdriver_simple.py  motor.py  motor_test.py  sensor.py
hardware/motor/test/: configurable_fastdriver_testing.py
hardware/train/: connect.py  train.py
meassure/: meassure.py
wifisidechannels/: NOTES_24_08_15.md  __init__.py  test.ipynb
wifisidechannels/app/: __init__.py  app.py
wifisidechannels/classifier/: __init__.py  datasets.py  loader.py  loss.py  main.py  pyproject.toml  transforms.py  utils.py  wiki_eve1D.py  wiki_eve2D.py
wifisidechannels/classifier/gradient_reversal/: .markdownlint.json
wifisidechannels/components/: __init__.py  extractor.py  packet_processor.py  parser.py  plotter.py
wifisidechannels/components/wipicap/: README.md  backends.c  backends.pyx  setup.py  test.py
wifisidechannels/models/: __init__.py  export_models.py  models.py  presets.py
wifisidechannels/tests/: __init__.py  test.py
wifisidechannels/units/: __init__.py  txbf.py  wifi.py
wiki_eve_max/: __init__.py  dataset.py  dataset_generator.md  dataset_generator.py  loss.py  model.py  transform.py  work.py
