[tool.poetry]
name = "WiFiSidechannels"
version = "0.1.0"
description = ""
authors = ["sxlus <sxlus@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
scapy = "^2.5.0"
gmpy = "^1.17"
cython = "^3.0.10"
pyshark = "^0.6"
loguru = "^0.7.2"
tqdm = "^4.66.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
