[tool.poetry]
name = "wifisidechannels"
version = "0.1.0"
description = ""
authors = ["sxlus <sxlus@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
scapy = "^2.5.0"
cython = "^3.0.10"
loguru = "^0.7.2"
tqdm = "^4.66.4"
joblib = "^1.4.2"
setuptools = "^70.0.0"
pyqt6 = "^6.7.0"
pyshark = "^0.6"
paramiko = "^3.4.1"
pyserialtransfer = "^2.6.9"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
numpy = "<2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
