[tool.poetry]
name = "1st-cnn"
version = "0.1.0"
description = ""
authors = ["Maximilian Andersen <sxlus@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11"
ipykernel = "^6.29.5"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
matplotlib = "^3.9.1"
torch = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
